--- a/src/!NuGet/RNGesus.nuspec
+++ b/src/!NuGet/RNGesus.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-    <id>Luke.EZRNG</id>
+    <id>Luke.RNGesus</id>
     <version>1.0</version>
     <authors>Luke Pothier</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
