--- a/src/!NuGet/RNGesus.nuspec
+++ b/src/!NuGet/RNGesus.nuspec
@@ -6,7 +6,8 @@
     <authors>Luke Pothier</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>
-        Easy-to-use API wrapping .NET's (cryptographically secure) RNGCryptoServiceProvider</description>
+        Easy-to-use API wrapping .NET's (cryptographically secure) RNGCryptoServiceProvider. Generate random strings, numbers, booleans or byte arrays without worrying about duplicates or insecure results.
+      </description>
     <frameworkAssemblies>
         <frameworkAssembly assemblyName="System" targetFramework="net45" />
     </frameworkAssemblies>
