--- a/src/RNGesus.Tests/RNGesus.Tests.csproj
+++ b/src/RNGesus.Tests/RNGesus.Tests.csproj
@@ -36,7 +36,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GeneratorTests.cs" />
+    <Compile Include="RNGesusTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
