Changed from static to instance type, added thread safety, changed return types for ease-of-use

--- a/src/RNGesus/RNGesus.csproj
+++ b/src/RNGesus/RNGesus.csproj
@@ -7,9 +7,9 @@
     <ProjectGuid>{14ED63B3-39BC-45B6-8011-6031B4B96596}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RNGesus</RootNamespace>
-    <AssemblyName>RNGesus</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>Luke.RNG</RootNamespace>
+    <AssemblyName>Luke.RNG</AssemblyName>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -29,6 +29,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Luke.RNG.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>false</SignAssembly>
