--- a/src/RNGesus.Tests/RNGesus.Tests.csproj
+++ b/src/RNGesus.Tests/RNGesus.Tests.csproj
@@ -7,9 +7,9 @@
     <ProjectGuid>{8EDF4429-251A-416D-BB68-93F227191BCF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RNGesus.Tests</RootNamespace>
-    <AssemblyName>RNGesus.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>Luke.RNG.Tests</RootNamespace>
+    <AssemblyName>Luke.RNG.Tests</AssemblyName>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
