--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,6 @@ branches:
   only:
   - master
 before_build:
-- cmd: nuget restore \src\RNGesus.Tests
+- cmd: nuget restore src\RNGesus.Tests -PackagesDirectory src\packages
 build:
   verbosity: diagnostic
