--- a/src/RNGesus/RNGesus.csproj
+++ b/src/RNGesus/RNGesus.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\Constants.cs" />
     <Compile Include="RNGesus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
